RESOLVED FIXED 206868
Regression: 30+ layout-test crash on Windows
https://bugs.webkit.org/show_bug.cgi?id=206868
Summary Regression: 30+ layout-test crash on Windows
Attachments
Patch (1.73 KB, patch)
2020-01-28 11:52 PST, Andres Gonzalez
no flags
Alexey Proskuryakov
Comment 2 2020-01-28 11:04:12 PST
Frame[00] Triage Symbol: [WebKit!AccessibleDocument::document+0xf] Frame[01] Triage Symbol: [WebKit!WebFrame::accessible+0x46] Frame[02] Ignore Symbol: [WebKit!WebView::WebViewWndProc+0x5a8] There was only one accessibility change in that range, https://trac.webkit.org/r255167
Radar WebKit Bug Importer
Comment 3 2020-01-28 11:04:20 PST
Andres Gonzalez
Comment 4 2020-01-28 11:52:12 PST
WebKit Commit Bot
Comment 5 2020-01-28 12:51:33 PST
Comment on attachment 389044 [details] Patch Clearing flags on attachment: 389044 Committed r255270: <https://trac.webkit.org/changeset/255270>
WebKit Commit Bot
Comment 6 2020-01-28 12:51:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.