Regression: 30+ layout-test crash on Windows https://bugs.webkit.org/show_bug.cgi?id=206868

Reviewed by Chris Fleizach.

Instead of getting the AXObjectCache to invoke detachWrapper, detach the wrapper directly.

* accessibility/win/AccessibilityObjectWin.cpp:
(WebCore::AccessibilityObject::detachPlatformWrapper):


Canonical link: https://commits.webkit.org/219911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255270 268f45cc-cd09-0410-ab3c-d52691b4dbfc